Merge branch 'namespace-handler-fixes' of https://github.com/grgrzybek/aries into trunk
Conflicts:
	tx-control/pom.xml
	tx-control/tx-control-jpa-itests/pom.xml
	tx-control/tx-control-jpa-itests/src/test/java/org/apache/aries/tx/control/itests/AbstractJPATransactionTest.java
	tx-control/tx-control-provider-jpa-local/src/main/java/org/apache/aries/tx/control/jpa/local/impl/JPAEntityManagerProviderFactoryImpl.java

git-svn-id: https://svn.apache.org/repos/asf/aries/trunk@1738326 13f79535-47bb-0310-9956-ffa450edef68